--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1264,7 +1264,6 @@ body {
   flex-direction: column;
   width: 100%;
   height: 100%;
-  padding: 0.5rem 0.8rem;
   font-size: 0.9rem;
 }
 /* Browse-Right-Sidebar Section */
@@ -1278,6 +1277,30 @@ body {
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
+}
+.browse-right-sidebar__top {
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-shrink: 0;
+  flex-direction: column;
+  padding: 0.5rem 0.8rem 0 0.8rem;
+}
+.browse-right-sidebar__middle {
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-grow: 1;
+  min-height: 30%;
+  flex-direction: column;
+  padding: 0 0.8rem;
+}
+.browse-right-sidebar__bottom {
+  flex-shrink: 0;
+  margin-top: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0 0.8rem 0.5rem 0.8rem;
 }
 
 /* Browse-Right-Sidebar Play Button */
