feat: Extension support for Tasks
feat: Data Pack exporting

refactor: Add symlink setting to config page

feat: Node Sqlite3 interceptor for Exts

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -1177,3 +1177,7 @@ body {
 .task-progress-bar--fill {
   background-color: var(--layout__confirm-color);
 }
+
+.task-progress-bar--failure {
+  background-color: var(--layout__invalid-color);
+}
