--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -1179,6 +1179,12 @@ body {
 }
 
 /** Tasks */
+.task-bar-empty {
+  font-size: 2em;
+  font-weight: bold;
+  color: var(--layout__secondary-text-color);
+}
+
 .task-status {
   font-style: italic;
   color: var(--layout__secondary-text-color);
