feat: Collapsing Task Bar

--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -1179,6 +1179,10 @@ body {
 }
 
 /** Tasks */
+.task-bar--header {
+  background-color: var(--layout__secondary-background)
+}
+
 .task-bar-empty {
   font-size: 2em;
   font-weight: bold;
