--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -2764,9 +2764,20 @@ body {
 
 /** Tasks */
 
+.task-bar--header {
+  width: 100%;
+  height: 1rem;
+}
+
+.task-bar--header-chevron {
+  height: 1rem;
+  width: 100%;
+  text-align: center;
+}
+
 .task-bar {
   width: 100%;
-  height: 8%;
+  height: 9%;
   overflow-y: auto;
 }
 
