--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1219,6 +1219,18 @@ body {
   width: 100%;
   height: 100%;
 }
+/* Loading */
+.game-browser__loading {
+  display: flex;
+  flex-direction: column;
+  font-size: 3em;
+  font-weight: bold;
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
 /* Sidebar */
 .game-browser__sidebar {
   --divider-width: 4px;
