--- a/static/window/styles/fancy.css
+++ b/static/window/styles/fancy.css
@@ -602,6 +602,7 @@ body {
 }
 /* Browse-Right-Sidebar Play Button */
 .browse-right-sidebar__play-button,
+.browse-right-sidebar__play-button--busy,
 .browse-right-sidebar__play-button--running,
 .browse-right-sidebar__play-button--download {
   border-width: 2px;
@@ -643,6 +644,9 @@ body {
 }
 .browse-right-sidebar__play-button--download:active {
   background-color: var(--layout__play-button--download--active);
+}
+.browse-right-sidebar__play-button--busy {
+  background-color: var(--layout__secondary-background);
 }
 .browse
 /* BrowseSidebar Title-Row Buttons */
