--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -669,6 +669,16 @@ body {
   float: right;
 }
 
+/* ----- IFrame ----- */
+.iframe-page {
+  width: 100%;
+  height: 100%;
+}
+.iframe-page-inner {
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
 
 /* ------ Home ------ */
 .home-page {
