feat: Add back Tag Filters in Curate checkbox

--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -986,6 +986,7 @@ body {
   justify-content: space-between;
   align-items: center;
   font-weight: bold;
+  margin-top: 0.5rem;
 }
 .curate-page__right-dropdown-content {
   display: flex;
