--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -268,6 +268,12 @@ body {
   display: flex;
   flex-direction: column;
 }
+.tag-icon-image {
+  width: 1rem;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 .tag-icon {
   margin-right: 0.2em;
   flex: none;
