--- a/static/window/styles/core.css
+++ b/static/window/styles/core.css
@@ -1305,6 +1305,14 @@ body {
   user-select: none;
   vertical-align: sub;
 }
+.platform-tag__icon {
+  display: inline-flex;
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 1rem;
+  height: 1rem;
+  margin-right: 0.2rem;
+}
 .curate-tag__icon {
   display: inline-flex;
   background-size: contain;
